# quicport

./: .envrc.sh  .gitattributes  .gitignore  .typos.toml  .versenv.env  Cargo.toml  Makefile  README.md  SPEC.ja.md  SPEC_data-plane.md  build.rs  cspell.config.yml
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: label-checker.yml  rust-build.yml  rust-fmt.yml  rust-lint.yml  rust-test.yml
contrib/systemd/: quicport-simple.service  quicport-starter  quicport.service
platform/linux/bpf/: bpf_helpers.h  quicport_reuseport.bpf.c  quicport_reuseport.h  vmlinux.h
platform/linux/systemd/: quicport-starter  quicport.service
src/: api.rs  cid_generator.rs  client.rs  control_plane.rs  data_plane.rs  ipc.rs  lib.rs  main.rs  protocol.rs  quic.rs  server.rs  statistics.rs
src/ipc/: mod.rs  state.rs
src/platform/: mod.rs
src/platform/linux/: ebpf_router.rs  mod.rs
tests/: integration_test.rs
